--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>Test for GITHUB MINI COURSE</title>
 </head>
 <body>
+    <img src="cat.jpg"/>
     <h2>Welcome to myWebSite</h2>
 </body>
